--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -212,18 +212,17 @@ p {
   }
 
   &__details {
-    padding: 250px 0 25px;
+    padding: 250px 1rem 25px;
     position: relative;
     z-index: 3;
   }
 
   &__info {
     margin: 0 auto;
-    padding: 0 1rem;
     max-width: 100%;
 
     &__dob {
-      font-size: 0.75rem;
+      font-size: 0.8rem;
       line-height: 1.5;
       letter-spacing: 0.5px;
     }
@@ -232,6 +231,33 @@ p {
       font-size: 3rem;
       line-height: 1.2em;
       margin-bottom: 1rem;
+    }
+  }
+
+  hr {
+    height: 6px;
+    background-position: left center;
+    background-repeat: repeat-x;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    border-left: none;
+    opacity: 0.3;
+    margin: 1.5rem 0;
+  }
+
+  &__socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    list-style: none;
+    gap: 1rem;
+
+    a {
+      color: $text-white;
+      font-size: 1rem;
     }
   }
 }
