--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -9,21 +9,21 @@ $text-body-1: "Oswald", sans-serif;
 $text-body-2: "Roboto", sans-serif;
 $text-white: #f8fafc;
 $bg-primary: #000000;
-$color-ig: #E4405F;
+$color-ig: #e4405f;
 $color-tiktok: $text-white;
-$color-linkedin: #0A66C2;
-$color-fb: #1877F2;
-$transition-default: .2s ease-in-out;
+$color-linkedin: #0a66c2;
+$color-fb: #1877f2;
+$transition-default: 0.2s ease-in-out;
 
 // Function
 @mixin tablet {
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     @content;
   }
 }
 
 @mixin smallDesktop {
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     @content;
   }
 }
@@ -42,7 +42,7 @@ body {
 }
 
 p {
-  letter-spacing: .3px;
+  letter-spacing: 0.3px;
   line-height: 1.5;
   font-family: $text-body-1;
 }
@@ -67,7 +67,7 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
     z-index: 2;
   }
 
@@ -121,7 +121,7 @@ p {
       margin: 2.5rem 0 4rem;
 
       h1 {
-        span{
+        span {
           display: block;
         }
       }
@@ -135,12 +135,12 @@ p {
 
     &__date {
       margin-bottom: 2rem;
-      letter-spacing: .5px;
+      letter-spacing: 0.5px;
       line-height: 2rem;
     }
 
     &__address {
-      letter-spacing: .3px;
+      letter-spacing: 0.3px;
     }
   }
 }
@@ -163,7 +163,7 @@ p {
     h2 {
       font-size: 2.5rem;
       line-height: 1.5;
-      letter-spacing: .5px;
+      letter-spacing: 0.5px;
       margin-bottom: 1rem;
     }
   }
