--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -28,6 +28,12 @@ $transition-default: 0.2s ease-in-out;
   }
 }
 
+@mixin laptop {
+  @media (min-width: 1366px) {
+    @content;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -175,12 +181,24 @@ p {
   text-align: center;
   position: relative;
 
+  &--groom {
+    .profile__slider {
+      left: unset;
+      right: 0;
+    }
+  }
+
   &__slider {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+
+    @include laptop {
+      width: 60%;
+    }
 
     .swiper-slide {
       background-size: cover;
@@ -190,8 +208,12 @@ p {
         content: "";
         width: 100%;
         height: 100%;
-        background: linear-gradient(0deg, #000000 32.86%, rgba(0, 0, 0, 0.46) 64.8%, #000000 98.26%);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 1) 32.86%, rgba(0, 0, 0, 0.3) 65%, rgba(0, 0, 0, 1) 98%);
         display: block;
+
+        @include laptop {
+          background: linear-gradient(0deg, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 1) 98%);
+        }
       }
     }
   }
@@ -212,14 +234,23 @@ p {
   }
 
   &__details {
-    padding: 250px 1rem 25px;
+    padding: 290px 1rem 25px;
     position: relative;
     z-index: 3;
+
+    @include laptop {
+      max-width: 40%;
+      padding: 100px 1rem;
+    }
   }
 
   &__info {
     margin: 0 auto;
     max-width: 100%;
+
+    @include tablet {
+      max-width: 700px;
+    }
 
     &__dob {
       font-size: 0.8rem;
