--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -181,17 +181,55 @@ p {
   text-align: center;
   position: relative;
 
+  @include smallDesktop {
+    min-height: 90vh;
+  }
+
   &--groom {
     .profile__slider {
-      left: unset;
       right: 0;
+
+      .swiper-slide {
+        &::after {
+          right: 0;
+          
+          @include laptop {
+            background: rgb(0,0,0);
+            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 41%); 
+          }
+        }
+      }
+    }
+
+    .profile__details {
+      margin-right: auto;
+    }
+  }
+
+  &--bride {
+    .profile__slider {
+      left: 0;
+
+      .swiper-slide {
+        &::after {
+          left: 0;
+          
+          @include laptop {
+            background: rgb(0,0,0);
+            background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 41%); 
+          }
+        }
+      }
+    }
+
+    .profile__details {
+      margin-left: auto;
     }
   }
 
   &__slider {
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -214,6 +252,16 @@ p {
         @include laptop {
           background: linear-gradient(0deg, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 1) 98%);
         }
+      }
+
+      &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        display: block;
+        background: none;
+        position: absolute;
+        top: 0;
       }
     }
   }
@@ -263,34 +311,48 @@ p {
       line-height: 1.2em;
       margin-bottom: 1rem;
     }
-  }
 
-  hr {
-    height: 6px;
-    background-position: left center;
-    background-repeat: repeat-x;
-    border-top: none;
-    border-right: none;
-    border-bottom: none;
-    border-left: none;
-    opacity: 0.3;
-    margin: 1.5rem 0;
-  }
+    &__desc {
+      margin: 0 auto;
 
-  &__socials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 1;
-    list-style: none;
-    gap: 1rem;
+      @include tablet {
+        max-width: 350px;
+      }
+    }
 
-    a {
-      color: $text-white;
-      font-size: 1rem;
+    hr {
+      height: 6px;
+      background-position: left center;
+      background-repeat: repeat-x;
+      border-top: none;
+      border-right: none;
+      border-bottom: none;
+      border-left: none;
+      opacity: 0.3;
+      margin: 1.5rem auto;
+  
+      @include tablet {
+        max-width: 350px;
+      }
+    }
+
+    &__socials {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      z-index: 1;
+      list-style: none;
+      gap: 1rem;
+  
+      a {
+        color: $text-white;
+        font-size: 1rem;
+      }
     }
   }
+
+
 }
 // EOF Section Profile Details
 
