update profile section and add acf field

--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -304,6 +304,7 @@ p {
       font-size: 0.8rem;
       line-height: 1.5;
       letter-spacing: 0.5px;
+      margin-bottom: .75em;
     }
 
     &__name {
