--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -9,10 +9,12 @@ $text-body-1: "Oswald", sans-serif;
 $text-body-2: "Roboto", sans-serif;
 $text-white: #f8fafc;
 $bg-primary: #000000;
+$bg-primary-800:#191919;
 $color-ig: #e4405f;
 $color-tiktok: $text-white;
 $color-linkedin: #0a66c2;
 $color-fb: #1877f2;
+$color-gold: #A47E3B;
 $transition-default: 0.2s ease-in-out;
 
 // Function
@@ -29,7 +31,7 @@ $transition-default: 0.2s ease-in-out;
 }
 
 @mixin laptop {
-  @media (min-width: 1366px) {
+  @media (min-width: 1200px) {
     @content;
   }
 }
@@ -53,8 +55,46 @@ p {
   font-family: $text-body-1;
 }
 
+hr {
+  height: 6px;
+  background-position: left center;
+  background-repeat: repeat-x;
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
+  border-left: none;
+  opacity: 0.3;
+  margin: 1.5rem auto;
+
+  @include tablet {
+    max-width: 350px;
+  }
+}
+
 .text-header {
   font-family: $text-header-2;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  border: 1px solid;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 8px;
+  letter-spacing: 1px;
+  transition: $transition-default;
+
+  &--primary {
+    color: $text-white;
+    border-color: $color-gold;
+    background-color: $color-gold;
+
+    &:hover {
+      color: $color-gold;
+      background-color: transparent;
+    }
+  }
 }
 
 // Section Banner
@@ -122,7 +162,7 @@ p {
     }
 
     &__name {
-      font-size: 3.5rem;
+      font-size: 3rem;
       line-height: 1em;
       margin: 2.5rem 0 4rem;
 
@@ -166,6 +206,10 @@ p {
       max-width: 700px;
     }
 
+    figure {
+      margin-bottom: 2rem;
+    }
+
     h2 {
       font-size: 2.5rem;
       line-height: 1.5;
@@ -192,10 +236,10 @@ p {
       .swiper-slide {
         &::after {
           right: 0;
-          
+
           @include laptop {
             background: rgb(0,0,0);
-            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 41%); 
+            background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 41%);
           }
         }
       }
@@ -213,10 +257,10 @@ p {
       .swiper-slide {
         &::after {
           left: 0;
-          
+
           @include laptop {
             background: rgb(0,0,0);
-            background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 41%); 
+            background: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 41%);
           }
         }
       }
@@ -315,23 +359,8 @@ p {
 
     &__desc {
       margin: 0 auto;
+      font-size: 1.1rem;
 
-      @include tablet {
-        max-width: 350px;
-      }
-    }
-
-    hr {
-      height: 6px;
-      background-position: left center;
-      background-repeat: repeat-x;
-      border-top: none;
-      border-right: none;
-      border-bottom: none;
-      border-left: none;
-      opacity: 0.3;
-      margin: 1.5rem auto;
-  
       @include tablet {
         max-width: 350px;
       }
@@ -345,10 +374,15 @@ p {
       z-index: 1;
       list-style: none;
       gap: 1rem;
-  
+
       a {
         color: $text-white;
         font-size: 1rem;
+        transition: $transition-default;
+
+        &:hover {
+          color: $color-gold;
+        }
       }
     }
   }
@@ -356,6 +390,136 @@ p {
 
 }
 // EOF Section Profile Details
+
+// Section Venue
+.venue {
+  position: relative;
+  padding: 5rem 0;
+
+  @include laptop {
+    min-height: 100vh;
+    padding: 0;
+  }
+
+  &__info {
+    text-align: center;
+    padding: 0 1rem;
+
+    @include laptop {
+      max-width: 750px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 3;
+      background-color: $bg-primary-800;
+      border-radius: 8px;
+      padding: 1.5rem 2rem 2rem;
+      box-shadow: 0px 0px 40px -5px rgba(0,0,0,0.3);
+      transform: translateY(10%);
+    }
+
+    &__title {
+      h2 {
+        font-size: 2.5rem;
+        line-height: 1.5;
+        letter-spacing: .5px;
+        margin-bottom: 1rem;
+
+        @include laptop {
+          line-height: 1;
+        }
+      }
+    }
+
+    &__subtitle {
+      max-width: 350px;
+      margin: 0 auto 2rem;
+
+      @include laptop {
+        max-width: 100%;
+      }
+    }
+
+    &__table {
+      border: 1px solid $color-gold;
+      border-radius: 8px;
+      max-width: 350px;
+      margin: 0 auto 2rem;
+
+      @include laptop {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 100%;
+      }
+
+      &__dates {
+        padding: 1.5rem;
+        border-bottom: 1px solid $color-gold;
+
+        @include laptop {
+          border-bottom: unset;
+          border-right: 1px solid $color-gold;
+        }
+
+        &__month {
+          font-size: 1.2rem;
+          text-transform: uppercase;
+        }
+
+        &__date {
+          font-size: 3rem;
+          font-weight: 700;
+        }
+
+        &__year {
+          font-size: 1.2rem;
+        }
+      }
+
+      &__details {
+        font-size: 1.1rem;
+
+        @include laptop {
+          grid-column: 2/4;
+        }
+
+        &__time {
+          padding: 1.5rem;
+
+          @include laptop {
+            border-bottom: 1px solid $color-gold;
+          }
+        }
+
+        &__location {
+          padding: 0 1.5rem 1.5rem;
+
+          @include laptop {
+            padding: 1.5rem;
+          }
+        }
+      }
+    }
+  }
+
+  &__map {
+    display: none;
+
+    @include laptop {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+// EOF Section Venue
 
 // Footer
 footer {
