--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -185,13 +185,12 @@ hr {
       margin-bottom: 2rem;
       letter-spacing: 0.5px;
       line-height: 2rem;
-      font-size: 1.5rem;
-      font-weight: 600;
+      font-size: 1rem;
     }
 
     &__address {
       letter-spacing: 0.3px;
-      font-size: 1.125rem;
+      font-size: 1rem;
     }
   }
 }
@@ -593,6 +592,70 @@ hr {
   }
 }
 // EOF Section Countdown
+
+// Section Gallery
+.gallery {
+  padding: 5rem 0;
+  text-align: center;
+
+  &__title {
+    h2 {
+      font-size: 2.5rem;
+      line-height: 1.5;
+      letter-spacing: .5px;
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__container {
+
+    a {
+      position: relative;
+      box-sizing: border-box;
+      // padding: 10px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+      }
+    }
+  }
+
+  .grid {
+    margin: 0 auto;
+    // padding: 0 1rem;
+  }
+
+  /* clear fix */
+  .grid:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+
+  .grid-item,
+  .grid-sizer {
+    width: 50%;
+
+    @include smallDesktop {
+      width: 33.33%;
+    }
+
+    @include laptop {
+      width: 25%;
+    }
+  }
+
+  .grid-item {
+    float: left;
+    border: 5px solid transparent;
+    // margin-bottom: 10px;
+  }
+}
+
+// EOF Section Gallery
 
 // Footer
 footer {
