update git ignore and update css

--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css2?family=Mr+Dafoe&family=Oswald:wght@200;300;400;500;600;700&display=swap&family=Roboto:wght@300;400;500;700;900&display=swap&family=Arizonia&display=swap&family=Alex+Brush&family=Arizonia&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mr+Dafoe&family=Oswald:wght@200;300;400;500;600;700&display=swap&family=Roboto:wght@300;400;500;700;900&display=swap&family=Arizonia&display=swap&family=Alex+Brush&family=Arizonia&display=swap&family=Josefin+Slab:wght@300;400;500;600;700&display=swap");
 
 // Variable
 $text-header-1: "Mr Dafoe", cursive;
@@ -7,6 +7,7 @@ $text-header-2: "Arizonia", cursive;
 $text-header-3: "Alex Brush", cursive;
 $text-body-1: "Oswald", sans-serif;
 $text-body-2: "Roboto", sans-serif;
+$text-body-3: 'Josefin Slab', serif;
 $text-white: #f8fafc;
 $bg-primary: #000000;
 $bg-primary-800:#191919;
@@ -654,8 +655,7 @@ hr {
     // margin-bottom: 10px;
   }
 }
-
-// EOF Section Gallery
+// EOF Section Gallery 
 
 // Footer
 footer {
