--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -19,6 +19,7 @@ $color-gold: #A47E3B;
 $transition-default: 0.2s ease-in-out;
 $gradient-y-mobile: linear-gradient(0deg, rgba(0, 0, 0, 1) 32.86%, rgba(0, 0, 0, 0.3) 65%, rgba(0, 0, 0, 1) 98%);
 $gradient-y-desktop: linear-gradient(0deg, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 1) 98%);
+$box-shadow: 0px 0px 40px -5px rgba(0,0,0,0.3);
 
 // Function
 @mixin tablet {
@@ -43,6 +44,9 @@ $gradient-y-desktop: linear-gradient(0deg, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -420,7 +424,7 @@ hr {
       background-color: $bg-primary-800;
       border-radius: 8px;
       padding: 1.5rem 2rem 2rem;
-      box-shadow: 0px 0px 40px -5px rgba(0,0,0,0.3);
+      box-shadow: $box-shadow;
       transform: translateY(10%);
     }
 
@@ -656,6 +660,64 @@ hr {
   }
 }
 // EOF Section Gallery 
+
+// Back to top
+.to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: $bg-primary-800;
+    width: 35px;
+    height: 35px;
+    border-radius: 8px;
+    z-index: 99;
+    display: none;
+
+    &.show {
+        display: block;
+    }
+
+    a {
+        color: $color-gold;
+        line-height: 1em;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        box-shadow: $box-shadow;
+    }
+}
+// EOF Back to top
+
+// Toggle Audio
+.toggle-audio {
+    position: fixed;
+    bottom: 60px;
+    right: 20px;
+    background: $bg-primary-800;
+    width: 35px;
+    height: 35px;
+    border-radius: 8px;
+    z-index: 99;
+    display: none;
+
+    &.show {
+        display: block;
+    }
+
+    a {
+        color: $color-gold;
+        line-height: 1em;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        box-shadow: $box-shadow;
+    }
+}
+// EOF Toggle Audio
 
 // Footer
 footer {
