--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -111,6 +111,63 @@ hr {
   }
 }
 
+// Section Invitation Popup
+.popup-invitation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background-color: $bg-primary-800;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  text-align: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: $transition-default;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $gradient-y-desktop;
+  }
+
+  &.hide {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+
+  &__container {
+    width: 100%;
+    margin-bottom: 80px;
+    position: relative;
+  }
+
+  &__details {
+    max-width: 350px;
+    margin: 0 auto;
+
+    &__name {
+      font-size: 3rem;
+      margin: 20px 0;
+      line-height: 1.2;
+      font-weight: 700;
+    }
+
+    button {
+      margin-top: 25px;
+    }
+  }
+}
+// EOF Section Invitation Popup
+
 // Section Banner
 .banner {
   min-height: 100vh;
