--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -136,7 +136,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background: $gradient-y-desktop;
+    background: linear-gradient(0deg, rgba(0,0,0,0.9) 15%, rgba(0,0,0,0) 100%);
   }
 
   &.hide {
@@ -728,6 +728,53 @@ hr {
   }
 }
 // EOF Section Gallery
+
+// Section Closing
+.closing {
+  padding: 8rem 0;
+  text-align: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.92) 10%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.95) 90%);
+  }
+
+  &__text {
+    position: relative;
+    max-width: 450px;
+    margin: 0 auto;
+    letter-spacing: .5px;
+    text-shadow: -1px 2px 7px rgba(0,0,0,.39);
+    font-size: 1.15rem;
+    padding: 0 1rem;
+  }
+
+  &__title {
+    position: relative;
+    margin-top: 120px;
+
+    h2 {
+      font-size: 2rem;
+      line-height: 1.5;
+      letter-spacing: 0.5px;
+      margin-bottom: 1rem;
+
+      @include tablet {
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
+// EOF Section Closing
 
 // Back to top
 .to-top {
