--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -136,7 +136,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, rgba(0,0,0,0.9) 15%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 15%, rgba(0, 0, 0, 0) 100%);
   }
 
   &.hide {
@@ -748,12 +748,16 @@ hr {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.92) 10%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.95) 90%);
   }
 
+  figure {
+    position: relative;
+  }
+
   &__text {
     position: relative;
     max-width: 450px;
     margin: 0 auto;
-    letter-spacing: .5px;
-    text-shadow: -1px 2px 7px rgba(0,0,0,.39);
+    letter-spacing: 0.5px;
+    text-shadow: -1px 2px 7px rgba(0, 0, 0, 0.39);
     font-size: 1.15rem;
     padding: 0 1rem;
   }
