--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -386,8 +386,8 @@ hr {
   }
 
   &__picture {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     margin: 0 auto;
     border-radius: 50%;
     overflow: hidden;
@@ -731,7 +731,7 @@ hr {
 
 // Section Closing
 .closing {
-  padding: 8rem 0;
+  padding: 25rem 0 8rem;
   text-align: center;
   background-position: center;
   background-size: cover;
@@ -745,7 +745,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.92) 10%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.95) 90%);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.92) 10%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.95) 90%);
   }
 
   figure {
@@ -764,10 +764,10 @@ hr {
 
   &__title {
     position: relative;
-    margin-top: 120px;
+    margin-top: 50px;
 
     h2 {
-      font-size: 2rem;
+      font-size: 1.85rem;
       line-height: 1.5;
       letter-spacing: 0.5px;
       margin-bottom: 1rem;
