--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -60,6 +60,10 @@ body {
     margin: 0;
     height: 100%;
     overflow: hidden;
+
+    @include smallDesktop {
+      padding-right: 1rem;
+    }
   }
 }
 
@@ -741,11 +745,6 @@ hr {
   text-align: center;
   position: relative;
 
-  a {
-    color: $color-gold;
-    text-decoration: none;
-  }
-
   &__wrapper {
     padding: 0 1rem;
   }
@@ -762,8 +761,8 @@ hr {
   &__text {
     max-width: 350px;
     margin: 0 auto;
-    font-size: 1.15rem;
-    letter-spacing: .5px;
+    font-size: 1.125rem;
+    line-height: 1.5;
   }
 
   &__btn-wrapper {
@@ -774,7 +773,7 @@ hr {
 .amplop-popup {
   display: flex;
   min-height: 100vh;
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 999;
   background: rgba(0,0,0,.5);
@@ -782,6 +781,19 @@ hr {
   left: 0;
   bottom: 0;
   align-items: center;
+  opacity: 0;
+  visibility: hidden;
+
+  &.show {
+    opacity: 1;
+    visibility: visible;
+
+    .amplop-popup__container {
+      transform: translateY(0);
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 
   &__close {
     position: absolute;
@@ -789,6 +801,11 @@ hr {
     right: 10px;
     font-size: 1.5rem;
     line-height: 1em;
+    transition: $transition-default;
+
+    &:hover{
+      color: $text-white;
+    }
   }
 
   &__container {
@@ -798,6 +815,10 @@ hr {
     border-radius: 8px;
     width: 100%;
     position: relative;
+    transition: $transition-default;
+    transform: translateY(20px);
+    opacity: 0;
+    visibility: hidden;
 
     a {
       color: $color-gold;
@@ -826,9 +847,33 @@ hr {
         gap: 10px;
         margin-top: 10px;
         line-height: 1.5;
+        position: relative;
 
         a {
           font-size: 1.125rem;
+          transition: $transition-default;
+
+          &:hover {
+            color: $text-white;
+          }
+        }
+
+        &__message {
+          position: absolute;
+          top: 50%;
+          right: 10px;
+          transform: translateY(-50%);
+          background: #a47e3b;
+          padding: 2px 10px;
+          border-radius: 8px;
+          transition: $transition-default;
+          opacity: 0;
+          visibility: hidden;
+
+          &.show {
+            opacity: 1;
+            visibility: visible;
+          }
         }
       }
     }
