--- a/css/wedding.scss
+++ b/css/wedding.scss
@@ -48,13 +48,14 @@ $box-shadow: 0px 0px 40px -5px rgba(0, 0, 0, 0.3);
 }
 html {
   scroll-behavior: smooth;
+  font-family: $text-body-1;
 }
 
 body {
-  min-height: 100vh;
+  // min-height: 100vh;
   background-color: $bg-primary;
   color: $text-white;
-  font-family: $text-body-1;
+  overflow: auto;
 
   &.fixbody {
     margin: 0;
